<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="menu_routes">Routes</string>
    <string name="menu_rankings">Rankings</string>
    <string name="menu_poi_discussions">POI Discussions</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_my_profile">My profile</string>
</resources>